# shellm

./: .gitignore  Cargo.toml  README.md  README_zh.md  config.example.toml
src/: chat.rs  config.rs  i18n.rs  main.rs
src/llm/: mod.rs  openai.rs
src/pty/: mod.rs  responder.rs
